# scroll-of-dharma

./: .gitattributes  .gitignore  LICENSE  README.md  animation.py  app.py  audio.py  audio_builder.py  audio_utils.py  config.json  download_fonts.py  narrative.py  pyproject.toml  requirements.txt  setup.py  ui_constants.py
.github/workflows/: ci.yml  keep-alive.yml
assets/fonts/: fonts_css_debug.css  fonts_manifest.txt
tests/: conftest.py  test_assets.py
